# hello-nested-worlds-adventure

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  setup.sh
.github/workflows/: backup.yml  ci.yml
agents/: __init__.py  agent.py  banter.py  behaviors.py  personas.py  roster.py
causality/: __init__.py  laws.py  staging.py  wiring.py
consciousness/: __init__.py
docs/: CHANGELOG.md  konami.js  optical-illusion.html
docs/architecture/: overview.md
docs/decisions/: ADR-001-frontend-stack.md  ADR-002-image-generation.md  ADR-003-persistence-backend.md  ADR-004-day-one-data-policy.md  ADR-005-launch-operations.md  ADR-006-evolving-world-with-memory.md
docs/design/: game-design.md
docs/evaluation/: 2026-07-04-deep-evaluation.md  2026-07-18-critical-repo-evaluation.md  2026-07-19-expert-ensemble-evaluation.md
docs/infrastructure/: fly-deployment.md  stack.md
docs/pitch/: beta-brief.md
docs/roadmap/: ensemble-action-plan.md  phase-1-beta.md  phase-2-scale.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: App.jsx  auth.js  badges.js  dispatch.js  entry.js  main.jsx  mutations.js  ws.js
frontend/src/__tests__/: badges.test.js  dispatch.test.js  (+4 more)
interface/: __init__.py
multiverse/: __init__.py  chronicle.py  effects.py  generator.py  node.py  store.py  utils.py  verbs.py
persistence/: __init__.py
persistence/migrations/: 0001_initial.sql  0002_indexes.sql  0003_cost_budget.sql  0004_invite_keys.sql  0005_player_position.sql  0006_property_overrides.sql  0007_causal_queue.sql  0008_actor_identity.sql  0009_creation_timestamps.sql  0010_verb_maturation.sql  0011_unique_invite_name.sql  0012_registration_tokens.sql  0013_world_nodes.sql
puzzles/: __init__.py  data.py  engine.py  gates.py  generators.py  lockbox.js  types.py
puzzles/easter-eggs/: first-lock.md  lockbox.js
scripts/: beta_metrics.py  deploy.sh  ws_soak.py
server/: __init__.py  guard.py  handlers.py  heartbeat.py  imageprompt.py  moderation.py  observability.py  protocol.py  rooms.py
static/: explorer.js  guide.html  index.html  nodeart-global.js  nodeart.js  nodesound.js  register.html  register.js
static/app/: index.html
static/easter-egg/: illusion.html
tests/: conftest.py  test_agent.py  test_banter.py  test_causal_delay.py  test_causality.py  test_chronicle.py  test_chronicle_integrity.py  test_consciousness.py  test_continuity_freeze.py  test_day_one_recording.py  test_deploy_config.py  test_effects.py  test_frontend_contract.py  test_game_depth.py  test_generator.py  test_guard.py  test_heartbeat.py  test_imageprompt.py  test_interface.py  test_moderation.py  test_movement.py  test_observability.py  test_persistence.py  test_personas.py  test_polish.py  test_puzzle_composition.py  test_puzzles.py  test_redaction.py  test_resolution_and_voice.py  test_roster.py  test_scale_native.py  test_server.py  test_server_protocol.py  test_server_rooms.py  test_server_security.py  test_verbs.py  test_world_store.py  test_ws_conformance.py
(+311 files in other folders)
