[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nested-worlds-adventure"
version = "0.1.0"
description = "Nested Worlds Adventure: a shared persistent multiverse inhabited by human players and AI agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = [
    "agents",
    "causality",
    "consciousness",
    "interface",
    "multiverse",
    "persistence",
    "puzzles",
    "server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
