[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enfolded"
version = "0.1.0"
description = "Enfolded: Nested World Adventure — a shared persistent multiverse inhabited by human players and AI agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # Real RFC 6455 client used as an executable conformance spec for the
    # hand-rolled /ws server (tests/test_ws_conformance.py). >=13 for the
    # sync client's recv(timeout=...) the test relies on.
    "websockets>=13",
]

[tool.setuptools]
packages = [
    "agents",
    "causality",
    "consciousness",
    "interface",
    "multiverse",
    "persistence",
    "puzzles",
    "server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
